--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "flow-bin": "^0.132.0",
     "highlight.js": "^11.0.1",
     "husky": "7",
+    "install-peers-cli": "^2.2.0",
     "istanbul-instrumenter-loader": "^3.0.1",
     "karma": "^6.0.1",
     "karma-chai": "^0.1.0",
@@ -79,9 +80,9 @@
     "mocha": "^10.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
-    "react": "^17.0.2",
+    "react": "^16.9.0 || ^17 || ^18",
     "react-docgen": "^5.3.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^16.9.0 || ^17 || ^18",
     "react-test-renderer": "^17.0.2",
     "react-transform-hmr": "^1.0.4",
     "rollup": "^2.32.0",
@@ -96,6 +97,7 @@
     "rollup-plugin-uglify": "^6.0.4",
     "sass": "1.56.1",
     "sass-loader": "^10.2.1",
+    "shallow-with-context": "^0.5.1",
     "sinon": "^14.0.0",
     "slugify": "^1.3.4",
     "style-loader": "^2.0.0",
@@ -143,7 +145,7 @@
     "css:modules:dev": "sass --style expanded src/stylesheets/datepicker-cssmodules.scss | tee dist/react-datepicker-cssmodules.css dist/react-datepicker.module.css",
     "build:js": "rollup -c",
     "js:dev": "rollup -cw",
-    "prepare": "husky install"
+    "prepare": "install-peers && husky install"
   },
   "lint-staged": {
     "*.{js,jsx,json,css,scss,md}": [
