--- a/package.json
+++ b/package.json
@@ -112,11 +112,15 @@
   },
   "peerDependencies": {
     "date-fns": "^2.24.0",
+    "date-fns-jalali": "^2.29.3-0",
     "react": "^16.9.0 || ^17 || ^18",
     "react-dom": "^16.9.0 || ^17 || ^18"
   },
   "peerDependenciesMeta": {
     "date-fns": {
+      "optional": true
+    },
+    "date-fns-jalali": {
       "optional": true
     }
   },
